--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.rubensousa:bottomsheetbuilder:1.6.1'
     implementation 'com.nightonke:boommenu:2.1.1'
 }
